--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_db
+spring.datasource.username=ai1_1
+spring.datasource.password=smsm1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
